# drakahari_jovinan_sample-v2

./: LICENSE  README.md  app.py  app2.py  database.py  database2.py  database3test.py  oldapp.py  pyproject.toml  styles.css
static/: styles.css
static/css/: styles.css
templates/: about.html  abouts.html  ack.html  add_job.html  application_form.html  application_submitted.html  applications.html  banner.html  bootstrap.html  dbpics.html  dir.html  draktech.html  footer.html  home.html  jira.html  jobitem.html  jobpage.html  mongo.html  nav.html  tech.html  tools.html
