[tool.poetry]
name = "repl-nix-samplejoviantutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_samplejoviantutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
mysql-connector-python = "^8.3.0"
sqlalchemy = "^2.0.29"
werkzeug = "^3.0.2"
flask-httpauth = "^4.8.0"
pymongo = "^4.7.0"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
